# QAMModem

./: CMakeLists.txt  README.md  main.cpp
include/qam_simulator/: csv_writer.hpp  demodulator_qam.hpp  modulator_qam.hpp  noise.hpp  pipeline.hpp
scripts/: plot_ber.py
src/noise/: noise_impl.hpp
src/pipeline/: qam_simulator.cpp
src/utils/: csv_writer.cpp
tests/: demodulator_test.cpp  modulator_test.cpp  test_gray.py
